<resources>
    <string name="app_name">Take Pictures</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Image</string>
    <string name="second_fragment_label">Second Image</string>
    <string name="summary_label">Summary</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="take_photo">Take photo </string>
    <string name="select_photo">Select photo</string>
    <string name="content_description">Selected Image</string>
    <string name="start_over">Start over</string>
    <string name="modify">Modify</string>
    <string name="undo">Undo</string>
    <string name="swap">Swap</string>
    <string name="blur">Blur</string>
    <string name="clear">Clear</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>